--- a/.github/workflows/build-repo.yml
+++ b/.github/workflows/build-repo.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install packaging
+          mkdir -p repo
           python scripts/generate_repo.py
 
       - id: path
