--- a/.github/workflows/build-repo.yml
+++ b/.github/workflows/build-repo.yml
@@ -1,4 +1,3 @@
-
 name: Build & Deploy Blender Extension Repo
 
 on:
@@ -9,8 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      repo-path: ${{ steps.path.outputs.repo }}
     steps:
       - uses: actions/checkout@v4
 
@@ -20,15 +17,18 @@ jobs:
 
       - name: Build Repository
         env:
-          BASE_URL: https://<USERNAME>.github.io/<REPO>
+          BASE_URL: https://scorpion81.github.io/blender-extension-repo
         run: |
           pip install --upgrade pip
           pip install packaging
           mkdir -p repo
           python scripts/generate_repo.py
 
-      - id: path
-        run: echo "repo=repo" >> $GITHUB_OUTPUT
+      - name: Upload repo artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: repo
+          path: repo
 
   deploy:
     needs: build
@@ -38,6 +38,12 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download repo artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: repo
+          path: repo
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
